# F-Instruct

./: .gitignore  .gitmodules  README.md  pyproject.toml
DRR/digital-regulatory-reporting-master/: .gitignore  codefresh.yml  pom.xml
data/api/: all_definitions.json  all_endpoints.json  endpoint_urls.json  endpoints_by_tag.json  extraction_summary.json  openapi_manifest.json  source.json
data/database/: f-instruct-docs-vector-database.nfo
data/ingress/: Digital-Regulatory-Reporting-Market-and-Regulatory-Initiatives.md
data/processed/: 164169306-ISDA-Equities-Derivatives-2011-Definitions.md  2002-ISDA-Equity-Derivatives-Definitions.md  2002-ISDA-Master-Agreement-English.md  CDM-Overview-Nov-9899760f2fd49d4d4aa1a456a78536c5.md  Digital-Regulatory-Reporting-Market-and-Regulatory-Initiatives.md  Digital-Regulatory-Reporting.md  ISDA-2021-Definitions-Consolidated-Confirmation-Templates-COLOUR-CODED.md  ISDA-2021-Fallbacks-Protocol_April-2025-Benchmark-Module.md  ISDA-Launches-Digital-Regulatory-Reporting-1.0-and-Opens-Access-to-Entire-Market.md  ISDA_WEB_2013_EMIR_Portfolio_Reconciliation_Dispute_Resolution_and_Disclosure_Protocol.md  Key-Changes-in-the-2021-ISDA-Interest-Rate-Derivatives-Definitions-June-2021.md  Submitted-Preferences-Grid-18.03.2022.md  esma74-362-2281_final_report_guidelines_emir_refit.md
data/structured/: data.parquet
docs/presentation/: Ai IN tech hackathon May 25.pptx
docs/vendors/: marker-readme-doc.md
f_instruct/_/: processor_old.py
f_instruct/data/: __init__.py  classifier.py  converter.py  extractor.py  generator.py  (+3 more)
openbanksandboxswagger/: openbank.json
(+3934 files in other folders)
