[project]
name = "f-instruct"
version = "0.1.0"
description = "A structured financial agent system that produces compliant structured financial products and can integrate with open banking systems."
readme = "README.md"
requires-python = ">=3.11"
authors = [
    {name = "Team Tonic"},
]
dependencies = [
    "markdown>=3.8",
    "marker-pdf>=1.7.3",
    "nltk>=3.9.1",
    "pandas>=2.2.3",
    "rich>=14.0.0",
    "spacy>=3.8.7",
]
